fixed bug for background img on ios mobile

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body.is-os #page-header {
   /* background-attachment: initial !important;
   background-size: cover !important; */
   background: url("../assets/images/logo/op_pig_illustration_tattoo7.jpg") center top no-repeat scroll;
-  background-size: auto 100vh;
+  background-size: cover;
 }
 
 
